--- a/TuplesTLAS/TuplesTLASTests/TuplesTLASTests.csproj
+++ b/TuplesTLAS/TuplesTLASTests/TuplesTLASTests.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TuplesTLAS\TuplesTLAS.csproj">
+      <Project>{117523eb-d3e7-4787-ac2c-298dffc150dd}</Project>
+      <Name>TuplesTLAS</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
