--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,14 @@ solution: TuplesTLAS/TuplesTLAS.sln
 env:
   global:
     - EnableNuGetPackageRestore=true
+  before_install:
+    - sudo apt-get install nunit-console
   install:
     - nuget restore TuplesTLAS/TuplesTLAS.sln
   script: 
-    - xbuild
-    - ./build.sh
+    - nunit
+  after-script:
+    - nunit-console TuplesTLAS/TuplesTLASTests/bin/Debug/TuplesTLASTests.dll
   os:
     - windows
     - osx
