[AMA][CI] Refactored travis.yml file to run tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,12 @@
 language: csharp
 solution: TuplesTLAS/TuplesTLAS.sln
 env:
-  global:
-    - EnableNuGetPackageRestore=true
-  script:
-    - xbuild /p:Configuration=Debug TuplesTLAS/TuplesTLAS.sln
-    - sudo apt-get install nunit-console
+  before_install:
+  - sudo apt-get install nunit-console
+  before_script:
+  - nuget restore TuplesTLAS/TuplesTLAS.sln
+  after-script:
     - nunit-console TuplesTLAS/TuplesTLASTests/bin/Release/TuplesTLASTests.dll
-  install:
-    - nuget restore TuplesTLAS/TuplesTLAS.sln
   os:
     - windows
     - osx
