--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,23 @@
 language: csharp
 solution: TuplesTLAS/TuplesTLAS.sln
-env:
-  before_install:
-  - sudo apt-get install nunit-console
-  before_script:
+os:
+  - windows
+  - osx
+mono:
+  - 3.12.0
+  - 3.10.0
+install: 
   - nuget restore TuplesTLAS/TuplesTLAS.sln
-  after-script:
-    - nunit-console TuplesTLAS/TuplesTLASTests/bin/Release/TuplesTLASTests.dll
-  os:
-    - windows
-    - osx
-  mono:
-    - 3.12.0
-    - 3.10.0
+  - nuget install NUnit.Console -Version 3.9.0 -OutputDirectory tesrunner
+script: 
+  - msbuild /p:Configuration=Release TuplesTLAS/TuplesTLAS.sln
+  - mono ./testrunner/NUnit.ConsoleRunner.3.9.0/tools/nunit3-console.exe ./TuplesTLAS/TuplesTLASTests/bin/Release/TuplesTLASTests.Tests.dll
+
+
+#env:  
+#  before_install:
+#  - sudo apt-get install nunit-console
+#  before_script:
+#  - nuget restore TuplesTLAS/TuplesTLAS.sln
+#  after-script:
+#    - nunit-console TuplesTLAS/TuplesTLASTests/bin/Release/TuplesTLASTests.dll
