--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: csharp
 solution: TuplesTLAS/TuplesTLAS.sln
 os:
   - windows
-  - osx
 mono:
   - 3.12.0
   - 3.10.0
@@ -12,6 +11,8 @@ install:
 script: 
   - msbuild /p:Configuration=Release TuplesTLAS/TuplesTLAS.sln
   - mono ./testrunner/NUnit.ConsoleRunner.3.9.0/tools/nunit3-console.exe ./TuplesTLAS/TuplesTLASTests/bin/Release/TuplesTLASTests.Tests.dll
+env:
+
 
 #env:  
 #  before_install:
