[AMA][CI] Forced linux in os line

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: csharp
 solution: TuplesTLAS/TuplesTLAS.sln
 os:
-  - windows
+  - linux
 install:
   - nuget restore TuplesTLAS/TuplesTLAS.sln
   - nuget install NUnit.Console -Version 3.9.0 -OutputDirectory tesrunner
