[LHA][MAIN] mecanics
Add mecanics of game (functions main)

--- a/TuplesTLAS/TuplesTLAS/TuplesTLAS.csproj
+++ b/TuplesTLAS/TuplesTLAS/TuplesTLAS.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameManager\Game.cs" />
     <Compile Include="Objects\TupleAPI.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
