--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ os:
   - linux
 install:
   - nuget restore TuplesTLAS/TuplesTLAS.sln
-  - nuget install NUnit.Console -Version 3.9.0 -OutputDirectory testrunner
+  - nuget install NUnit.Console -Version 3.10.0 -OutputDirectory testrunner
 script:
   - msbuild /p:Configuration=Release TuplesTLAS/TuplesTLAS.sln
-  - mono ./testrunner/NUnit.Console.3.9.0/tools/nunit3-console.exe ./TuplesTLAS/TuplesTLASTests/bin/Release/TuplesTLASTests.dll
+  - mono ./testrunner/NUnit.ConsoleRunner.3.10.0/tools/nunit3-console.exe ./TuplesTLAS/TuplesTLASTests/bin/Release/TuplesTLASTests.dll
 
 
 #env:  
