--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ install:
 script:
   - msbuild /p:Configuration=Release TuplesTLAS/TuplesTLAS.sln
 #  - mono ./testrunner/NUnit.ConsoleRunner.3.10.0/tools/nunit3-console.exe ./TuplesTLAS/TuplesTLASTests/bin/Release/TuplesTLASTests.dll
-  - mono ./testrunner/NUnit.Framework-3.12.0/bin/net45/nunitlite-runner.exe ./TuplesTLAS/TuplesTLASTests/bin/Release/TuplesTLASTests.dll
+  - echo `ls ./testrunner/NUnit/`
+  - mono ./testrunner/NUnit.ConsoleRunner.3.12.0/tools/nunitlite-runner.exe ./TuplesTLAS/TuplesTLASTests/bin/Release/TuplesTLASTests.dll
