--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ install:
   - nuget restore TuplesTLAS/TuplesTLAS.sln
   - nuget install NUnit.Console -Version 3.9.0 -OutputDirectory testrunner
 script:
-  - msbuild /p:Configuration=Release TuplesTLAS/TuplesTLAS.sln
-  - mono ./testrunner/NUnit.ConsoleRunner.3.9.0/tools/nunit3-console.exe ./TuplesTLAS/TuplesTLASTests/bin/Release/TuplesTLASTests.dll
+  - msbuild /p:Configuration=Debug TuplesTLAS/TuplesTLAS.sln
+  - echo ls -l ./TuplesTLAS/TuplesTLASTests/bin/Debug/
+  - mono ./testrunner/NUnit.ConsoleRunner.3.9.0/tools/nunit3-console.exe ./TuplesTLAS/TuplesTLASTests/bin/Debug/TuplesTLASTests.dll
